--- a/analyses/analysis_1.Rmd
+++ b/analyses/analysis_1.Rmd
@@ -34,6 +34,8 @@ theme_set(theme_bw(18)+
                   text=element_text(family="serif")))
 
 all_data <- read.csv("./results_260_XPLab-2021-Group3_974857.csv")
+# exclude pilot data
+all_data <- all_data[all_data$submission_id > 2632, ]
 
 # total number of participants
 n_participants_raw <- all_data %>% 
